# dobaeni

./: .env.example  .gitignore  SEED.md  docker-compose.yml  package.json  theme.md
app/: CustomCursor.tsx  FeaturesSection.tsx  Footer.tsx  GallerySection.tsx  Hero.tsx  InkReveal.tsx  LoginSignupForm.tsx  Magnetic.tsx  ManifestoSection.tsx  Marquee.tsx  Navbar.tsx  Preloader.tsx  RevealSection.tsx  SmoothScroll.tsx  globals.css  layout.tsx  page.tsx
app/2fa/: page.tsx
app/admin/: AdminSidebar.tsx  layout.tsx  page.tsx
app/brands/: BrandsView.tsx  page.tsx
app/cart/: CartView.tsx  page.tsx
app/checkout/: CheckoutView.tsx  page.tsx
app/components/: AddToCartButton.tsx  BoardCollagePreview.tsx  CartBadge.tsx  ChatModal.tsx  CommentSection.tsx  ConfirmDialog.tsx  DiscoverFeed.tsx  DiscoverTile.tsx  FollowButton.tsx  ImageUpload.tsx  LikeButton.tsx  PageShell.tsx  ProductCard.tsx  SafeImage.tsx  SaveToBoard.tsx  StarInput.tsx  StarRating.tsx
app/dashboard/: AccountPanel.tsx  DashboardClient.tsx  page.tsx
app/discover/: DiscoverView.tsx  page.tsx
app/forbidden/: page.tsx
app/forgot-password/: page.tsx
app/gallery/: page.tsx
app/login/: page.tsx
app/looks/: LooksFeed.tsx  (+1 more)
lib/: admin-auth.ts  admin.ts  auth-client.ts  auth.ts  better-auth.d.ts  email.ts  format.ts  get-session.ts  queries.ts  rbac.ts  types.ts
prisma/: schema.prisma
scripts/: clean-seed.ts  dbtest.ts  debugAgent.ts  seed-admin.ts  seed-images.ts  testAgent.ts  verify-seed.ts
server/: .gitignore  db_tools.py  main.py  pyproject.toml  system_prompt.py  test_agent.py  tool_specs.py
(+77 files in other folders)
